Добавил гугл аналитику

--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/74913610" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KDDSC89NSY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-KDDSC89NSY');
+    </script>
 </head>
 
 <body>
